--- a/Pages/User/Edit.cshtml
+++ b/Pages/User/Edit.cshtml
@@ -58,9 +58,40 @@
                 <span asp-validation-for="Instructors.AboutMe" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <label asp-for="Instructors.OfficeAssignment.Location" class="control-label"></label>
+                <input asp-for="Instructors.OfficeAssignment.Location" class="form-control" />
+                <span asp-validation-for="Instructors.OfficeAssignment.Location" class="text-danger" />
             </div>
-        </form>
+            <div class="form-group">
+                <div class="table">
+                    <table>
+                        <tr>
+                            @{
+                                int cnt = 0;
+
+                                foreach (var ads in Model.AssignedAdsDataList)
+                                {
+                                    if (cnt++ % 3 == 0)
+                                    {
+                                    @:</tr><tr>
+                                    }
+                                    @:<td>
+                                        <input type="checkbox"
+                                               name="selectedCourses"
+                                               value="@ads.AdsID"
+                                               @(Html.Raw(ads.Assigned ? "checked=\"checked\"" : "")) />
+                                        @ads.AdsID @:  @ads.Title
+                                    @:</td>
+                                }
+                            @:</tr>
+                            }
+                        </table>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                </div>
+            </form>
     </div>
 </div>
 
