--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -38,7 +38,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model.MainData.Company)
+            @foreach (var item in Model.Company)
             {
                 string selectedRow = "";
                 if (item.ID == Model.CompanyID)
@@ -74,7 +74,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model.MainData.Company)
+            @foreach (var item in Model.Company)
             {
                 string selectedRow = "";
                 if (item.ID == Model.CompanyID)
@@ -86,7 +86,7 @@
                         @Html.DisplayFor(modelItem => item.Title)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Rating)
+                        @Html.DisplayFor(modelItem => item.EnrollmentDate)
                     </td>
                 </tr>
             }
@@ -105,7 +105,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model.MainData.Company)
+            @foreach (var item in Model.Company)
             {
                 string selectedRow = "";
                 if (item.ID == Model.CompanyID)
@@ -134,7 +134,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model.MainData.Company)
+            @foreach (var item in Model.Company)
             {
                 string selectedRow = "";
                 if (item.ID == Model.CompanyID)
