--- a/Pages/Company/Details.cshtml
+++ b/Pages/Company/Details.cshtml
@@ -105,29 +105,8 @@
                                 @Html.DisplayFor(model => model.Company.Tags)
                             </dd>
                             <dt class="col-sm-2">
-                                @Html.DisplayNameFor(model => model.Company.Enrollments)
+                                @Html.DisplayNameFor(model => model.Company.Owner)
                             </dt>
-                            <dd class="col-sm-10">
-                                <div class="table-responsive">
-                                    <table class="table table-hover">
-                                        <tr>
-                                            <th>@Localizer["Заголовок Объявления"]</th>
-                                            <th>@Localizer["Категория"]</th>
-                                        </tr>
-                                        @foreach (var item in Model.Company.Enrollments)
-                                        {
-                                            <tr>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.Ads.Title)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.Grade)
-                                                </td>
-                                            </tr>
-                                        }
-                                    </table>
-                                </div>
-                            </dd>
                         </dl>
                     </div>
                     <div>
